--- a/app/globals.css
+++ b/app/globals.css
@@ -126,4 +126,14 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  h1 {
+    @apply text-2xl font-bold;
+  }
+  h2 {
+    @apply text-xl font-bold;
+  }
+  h3 {
+    @apply text-lg font-bold;
+  }
 }
