fix: layout container width

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: #DB7D03;
+  --primary: #d3ac8b;
   --primary-foreground: #fff;
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
